correcting linter errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Thanks you for taking time to help us improve the platform
     </p>
   </div>
-  <div class="mainSurveyForm">
+  <div class="main-survey-Form">
     <div class="survey-form">
       <div class="form-div">
         <label>Name</label>
@@ -42,26 +42,26 @@
             <option value="6">others</option>
           </select>
         </div>
-        <div class=radio-container>
+        <div class="radio-container">
           <div id="form-radio">
             <label id="label-radio">would you recomend freecodecamp to a friend?</label>
           </div>
-          <div id="form-radio">
+          <div class="form-radio">
             <input type="radio" class="radio" value="definiitely" name="rocomment" />
             <label id="definitely">definitely</label>
           </div>
-          <div id="form-radio">
+          <div class="form-radio">
             <input type="radio"  class="radio" value="maybe" name="recommend" />
             <label id="maybe">maybe</label>
           </div>
-          <div id="form-radio">
+          <div class="form-radio">
             <input type="radio"  class="radio" value="not sure" name="recommend" />
-            <label id="not sure">not sure</label>
+            <label id="not-sure">not sure</label>
           </div>
         </div>
         <div class="form-div">
-          <label id="dropdown-label">What is your favorite feature of freeCodeCamp?</label>
-          <select id="dropdown" name="dropdown">
+          <label class="dropdown-label">What is your favorite feature of freeCodeCamp?</label>
+          <select class="dropdown" name="dropdown">
             <option name="1">select an option</option>
             <option name="1">challenges</option>
             <option name="1">projects</option>
@@ -132,7 +132,6 @@
         </div>
       </div>
     </div>
-  </div>
+   </div>
 </body>
-
 </html>
