--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Thanks you for taking time to help us improve the platform
       </p>
     </div>
-    <div class="main-survey-Form">
+    <div class="main-survey-form">
       <div class="survey-form">
         <div class="form-div">
           <label>Name</label>
