--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
               >would you recomend freecodecamp to a friend?</label
             >
           </div>
+
           <div class="form-radio">
             <input
               type="radio"
@@ -76,10 +77,16 @@
             />
             <label id="definitely">definitely</label>
           </div>
+
           <div class="form-radio">
-            <input type="radio" class="radio" value="maybe" name="recommend" />
+            <input
+             type="radio" 
+             class="radio" 
+             value="maybe" 
+             name="recommend" />
             <label id="maybe">maybe</label>
           </div>
+
           <div class="form-radio">
             <input
               type="radio"
@@ -89,7 +96,9 @@
             />
             <label id="not-sure">not sure</label>
           </div>
+
         </div>
+
         <div class="form-div">
           <label class="dropdown-label"
             >What is your favorite feature of freeCodeCamp?</label
@@ -214,17 +223,20 @@
           </div>
         </div>
         <br />
-        <div class="text-div">
+
+        <div class="main">
+        <!-- <div class="text-div"> -->
           <p id="text-area">Any comments or suggestions?</p>
           <textarea
             name="suggestions"
             class="text-input"
             placeholder="enter your comments  here..."
           ></textarea>
-        </div>
+        <!-- </div> -->
         <div class="button">
           <button class="submit">submit</button>
         </div>
+      </div>
       </div>
     </div>
   </body>
