--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
           </div>
 
           <div class="form-radio">
-            <input
-             type="radio" 
-             class="radio" 
-             value="maybe" 
-             name="recommend" />
+            <input type="radio" class="radio" value="maybe" name="recommend" />
             <label id="maybe">maybe</label>
           </div>
 
@@ -96,7 +92,6 @@
             />
             <label id="not-sure">not sure</label>
           </div>
-
         </div>
 
         <div class="form-div">
@@ -225,18 +220,17 @@
         <br />
 
         <div class="main">
-        <!-- <div class="text-div"> -->
           <p id="text-area">Any comments or suggestions?</p>
           <textarea
             name="suggestions"
             class="text-input"
             placeholder="enter your comments  here..."
           ></textarea>
-        <!-- </div> -->
-        <div class="button">
-          <button class="submit">submit</button>
+
+          <div class="button">
+            <button class="submit">submit</button>
+          </div>
         </div>
-      </div>
       </div>
     </div>
   </body>
